<resources>
    <string name="app_name" translatable="false">Matrice</string>
    <string name="app_version" translatable="false">1.2.0</string>
    <string name="url_github" translatable="false">https://github.com/csertant/matrice</string>

    <!-- Sign In issue -->
    <string name="error_sign_in">An error occurred while signing in.</string>

    <!-- Strings on BootScreenFragment -->
    <string name="description_studio_logo" translatable="false">studioLogo</string>
    <string name="description_gotomain" translatable="false">goToMain</string>

    <!-- App Logo Description -->
    <string name="description_applogomain" translatable="false">appLogoMain</string>

    <!-- Strings on MainScreenFragment -->
    <string name="text_menu_play">Play</string>
    <string name="text_menu_campaign">Campaign</string>
    <string name="text_menu_settings">Settings</string>
    <string name="text_menu_authors">Authors</string>

    <!-- Strings on NavButtons -->
    <string name="description_gotosettings" translatable="false">goToSettings</string>
    <string name="description_gotolevels" translatable="false">goToLevels</string>
    <string name="description_gotohome" translatable="false">goToHome</string>
    <string name="description_goback" translatable="false">goBack</string>

    <!-- Strings on AuthorsScreenFragment -->
    <string name="title_authors_research">Research</string>
    <string name="text_designer">Designed by nosebite Studios</string>
    <string name="text_programmer">Programmed by Tamas Csertan</string>
    <string name="text_copyright_notice" translatable="false">©2020 nosebite Studios</string>
    <string name="text_copyright_warning">All rights reserved!</string>

    <!-- Strings on GameScreenFragment -->
    <string name="description_figure" translatable="false">basic figure</string>
    <string name="placeholder_game_duration">0 s</string>

    <string name="description_pauseplay" translatable="false">pausePlayControl</string>
    <string name="description_stop" translatable="false">stopGameControl</string>
    <string name="description_retry" translatable="false">retryGameControl</string>
    <string name="description_clock_icon" translatable="false">clockIcon</string>
    <string name="description_steps_icon" translatable="false">stepsIcon</string>
    <string name="placeholder_text_steps">Steps</string>

    <!-- Strings on SuccessScreenFragment -->
    <string name="placeholder_text_score" translatable="false">Replace it with Score!</string>
    <string name="placeholder_score_details" translatable="false">Replace it with Score details!</string>
    <string name="description_success_picture" translatable="false">Picture displayed at success</string>
    <string name="text_score_details_start">Congratulations! You won in </string>
    <string name="text_score_details_middle">" steps and "</string>
    <string name="text_score_details_end"> seconds! Want to play a new game?</string>

    <!-- Settings Activity -->
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="title_game_category">Game</string>
    <string name="key_game_category" translatable="false">game_category</string>
    <string name="title_game_boardsize">Board Size</string>
    <string name="key_game_boardsize" translatable="false">game_boardsize</string>
    <string name="summary_game_boardsize">Size of the game board. Coming Soon!</string>
    <string name="key_figure_set" translatable="false">figure_set</string>
    <string name="title_figure_set">Figure Set</string>
    <string name="summary_figure_set">Set of figures you would like to play with</string>
    <string name="key_transition_type" translatable="false">transition_type</string>
    <string name="title_transition_type">Transition</string>
    <string name="summary_transition_type">Type of transition you would like to play with</string>
    <string name="key_data_category" translatable="false">data_category</string>
    <string name="title_data_category">Player Information</string>
    <string name="summary_data_category">To contribute to our research please kindly provide us with general information about yourself.</string>
    <string name="key_gender_info" translatable="false">gender_info</string>
    <string name="title_gender_info">Gender</string>
    <string name="summary_gender_info">Add your gender to promote our research</string>
    <string name="key_age_info" translatable="false">age_info</string>
    <string name="title_age_info">Age</string>
    <string name="summary_age_info">Add your age to contribute more</string>
    <string name="key_general_category" translatable="false">general_category</string>
    <string name="title_general_category">General</string>
    <string name="key_app_language" translatable="false">app_language</string>
    <string name="title_app_language">Language</string>
    <string name="summary_app_language">Choose the language of the app</string>
    <string name="key_enable_dark_mode" translatable="false">enable_dark_mode</string>
    <string name="title_enable_dark_mode">Dark Mode</string>
    <string name="summary_enable_dark_mode">Enable dark mode in app</string>
    <string name="key_about_category" translatable="false">about_category</string>
    <string name="title_about_category">About &amp; Feedback</string>
    <string name="title_version">App Version</string>
    <string name="key_send_feedback" translatable="false">send_feedback</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>

    <string name="key_privacy_policy" translatable="false">privacy_policy</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="url_privacy" translatable="false">https://csertant.github.io/nosebite-studios</string>
    <string name="error_view_webpage">Can\'t find application for opening webpage.</string>

    <string name="text_choose_email_client">Choose email client</string>
    <string name="message_signed_out">Signed out successfully!</string>
    <string name="message_feature_coming_soon">This feature is coming soon!</string>
    <string name="text_sign_out">Sign Out</string>
    <string name="message_sign_in_success">Signed in successfully!</string>
    <string name="message_sign_in_process">Signing in…</string>
    <string name="description_open_achievements" translatable="false">openAchievements</string>
    <string name="description_open_leaderboards" translatable="false">openLeaderboards</string>
    <string name="summary_about">We would like to provide you with the best game experience so don\'t hesitate to tell us your opinion, report any bugs that you found and to share ideas on future improvements.</string>
    <string name="title_levels_fragment">Levels</string>
    <string name="error_pref_age_invalid_input">Invalid input! Your age must be a real age…</string>
    <string name="text_pref_language_english">English</string>
    <string name="text_pref_language_hungarian">Hungarian</string>
    <string name="text_pref_action_inversion">Inversion</string>
    <string name="text_pref_action_rotation">Rotation</string>
    <string name="text_pref_not_provided">Not provided</string>
    <string name="text_pref_gender_male">Male</string>
    <string name="text_pref_gender_female">Female</string>
    <string name="text_pref_gender_other">Other</string>
    <string name="text_pref_figures_plump">Plumpy</string>
    <string name="text_pref_figures_tictactoe">Tic Tac Toe</string>
    <string name="text_pref_figures_plusminus">Plus Minus</string>
    <string name="description_inversion_action" translatable="false">inversion</string>
    <string name="text_authors_research">This game is part of a research project that is hosted by the High Speed Network Laboratory at the Budapest University of Technology and Economics.
        As part of our research on how humans can navigate and find its paths in real-life complex networks we are gathering anonymous
        usage data from this game to analyze user behaviour. Are you wondering what the connection is between navigation and playing with the app?
        It appears that finding the best solution for the puzzle is analogous to finding a shortest path in a complex graph, namely a network.
        \nIf you are interested in what we are doing visit the website of the app from the Settings.\nAnd we are grateful if you play the
        game, this way you considerably contribute to our research. Thank you!
    </string>
    <string name="placeholder_parent_fragment_name" translatable="false">Parent ID</string>
    <string name="title_activity_appintro">How to Play</string>
    <string name="title_appintro_slidefirst">Welcome in the Game</string>
    <string name="description_appintro_slidefirst">Be fast, think twice! Solve awesome puzzles and find the best solutions!</string>
    <string name="title_appintro_slide2">Goal of the Game</string>
    <string name="description_appintro_slide2">Your goal is to reach a specific pattern from a start pattern with the least possible swipes.</string>
    <string name="title_appintro_slide34">Swipes</string>
    <string name="description_appintro_slide3">When you swipe from the left or from the top of the table or you tap on the minus shaped buttons the selected row or column changes all cells.</string>
    <string name="description_appintro_slide4">When you swipe from the right or from the bottom of the table or you tap on the triangular buttons the selected row or column cells rotate by one.</string>
    <string name="title_appintro_slidelast">Sign in</string>
    <string name="description_appintro_slidelast">Sign in with your Play Games account to compete with your friends and earn achievements.</string>
    <string name="key_first_run" translatable="false">first_run</string>
    <string name="text_boot_continue">Tap to continue</string>
    <string name="title_appintro_slide5">Help</string>
    <string name="description_appintro_slide5">Tap the question mark icon or long press on any button while playing to get more help.</string>
    <string name="key_version_name" translatable="false">version_name</string>
    <string name="text_gotohome">Main menu</string>
    <string name="text_pauseplay">Pause / Play</string>
    <string name="text_stop">Stop / New game</string>
    <string name="text_retry">Replay</string>
    <string name="text_gotolevels">Levels</string>
    <string name="text_goback">Previous</string>
    <string name="title_game_help_screen">Help</string>
    <string name="description_close" translatable="false">close</string>
    <string name="text_button_help">Controls and buttons</string>
    <string name="text_home_help">Press this button to go back to the main menu.</string>
    <string name="text_levels_help">Press the button to go to the level chooser screen of the campaign mode.</string>
    <string name="text_back_help">Proceed to the previous level in campaign mode or to the main menu.</string>
    <string name="text_pause_help">Pause the game. You can not swipe when the game is paused.</string>
    <string name="text_play_help">Continue the game.</string>
    <string name="text_stop_help">Stop and finish the game. You cannot continue after stopping.</string>
    <string name="text_new_game_help">Start a new game.</string>
    <string name="text_retry_help">Replay game.</string>
    <string name="text_buttons_help">Press long on any of the buttons to get a hint about its function.</string>
    <!-- TODO: Remove or change this placeholder text -->


</resources>
