<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/successFragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SuccessScreenFragment"
    android:background="@drawable/ic_game_surface3">

    <ImageView
        android:id="@+id/successPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/description_success_picture"
        android:src="@drawable/ic_success_icon"
        app:layout_constraintBottom_toTopOf="@+id/scoreText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="30dp"
        android:text="@string/placeholder_text_score"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/successPicture" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="52dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:columnCount="3"
        app:layout_constraintBottom_toTopOf="@+id/scoreDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreText"
        app:rowCount="1">

        <ImageButton
            android:id="@+id/successControlsReplayButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:contentDescription="@string/description_retry"
            android:src="@drawable/ic_retry_icon"
            app:layout_column="0"
            app:layout_gravity="center_vertical"
            app:layout_row="0" />

        <ImageButton
            android:id="@+id/successControlsLevelsButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:contentDescription="@string/description_gotolevels"
            android:src="@drawable/ic_levels_icon"
            app:layout_column="1"
            app:layout_gravity="center_vertical"
            app:layout_row="0" />

        <ImageButton
            android:id="@+id/successControlsPlayButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:contentDescription="@string/description_pauseplay"
            android:src="@drawable/ic_play_icon"
            app:layout_column="2"
            app:layout_gravity="center_vertical"
            app:layout_row="0" />
    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/scoreDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="30dp"
        android:text="@string/placeholder_score_details"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/homeButtonSuccess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

    <ImageButton
        android:id="@+id/homeButtonSuccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="100dp"
        android:contentDescription="@string/description_gotohome"
        android:src="@drawable/ic_home_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreDetail" />
</androidx.constraintlayout.widget.ConstraintLayout>