<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gameHelpFragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".GameHelpFragment" >

    <LinearLayout
        android:id="@+id/frontLayer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/backdrop_front_rounded"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/controlLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingStart="10dp"
            android:paddingTop="15dp"
            android:paddingEnd="10dp"
            android:paddingBottom="15dp"
            app:columnCount="2"
            app:rowCount="1">

            <TextView
                android:id="@+id/titleTextGameHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/titillium_web_semibold"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/title_game_help_screen"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_column="0"
                app:layout_gravity="start"
                app:layout_row="0" />

            <ImageButton
                android:id="@+id/closeButtonGameHelp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/description_close"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:src="@drawable/ic_baseline_close_24"
                app:layout_column="1"
                app:layout_gravity="end"
                app:layout_row="0" />
        </androidx.gridlayout.widget.GridLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/titleText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/titillium_web_light"
                    android:paddingStart="15dp"
                    android:paddingTop="15dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="5dp"
                    android:text="@string/title_appintro_slide2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <ImageView
                    android:id="@+id/imageGoalGameHelp"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/title_appintro_slide2"
                    android:src="@drawable/ic_intro_goal" />

                <TextView
                    android:id="@+id/descriptionText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/titillium_web_light"
                    android:paddingStart="15dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="5dp"
                    android:text="@string/description_appintro_slide2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <TextView
                    android:id="@+id/titleText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/titillium_web_light"
                    android:paddingStart="15dp"
                    android:paddingTop="15dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="5dp"
                    android:text="@string/title_appintro_slide34"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <ImageView
                    android:id="@+id/imageSwipeGameHelp1"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/title_appintro_slide34"
                    android:src="@drawable/ic_intro_swipe_lefttop" />

                <TextView
                    android:id="@+id/descriptionText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/titillium_web_light"
                    android:paddingStart="15dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="5dp"
                    android:text="@string/description_appintro_slide3"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <ImageView
                    android:id="@+id/imageSwipeGameHelp2"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/title_appintro_slide34"
                    android:src="@drawable/ic_intro_swipe_rightbottom" />

                <TextView
                    android:id="@+id/descriptionText3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/titillium_web_light"
                    android:paddingStart="15dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="5dp"
                    android:text="@string/description_appintro_slide4"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <TextView
                    android:id="@+id/titleText3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/titillium_web_light"
                    android:paddingStart="15dp"
                    android:paddingTop="15dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="5dp"
                    android:text="@string/text_button_help"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>